# Benchmarking

./: .gitignore
demos/boosting/: README.md  check_status.py  local_gepa.py  localapi_boosting.py  run_demo.py
demos/continual_learning_banking77/: BLOG_POST.md  README.md  run_classic_gepa.py  run_mipro_continual.py
demos/continual_learning_crafter/: README.md  __init__.py  data_splits.py  run_mipro_continual.py
demos/engine_bench/: DAYTONA_SUPPORT.md  Dockerfile.task_app  Dockerfile.task_app_amd64  HARBOR_MIGRATION_SCOPE.md  TEST_RESULTS.md  cli_runner.py  daytona_helper.py  enginebench_gepa.toml  enginebench_gepa_codex.toml  localapi_engine_bench.py  run.py  run_gepa_gpt5_anno.py
demos/linkedin_bench/: .gitignore  CLAUDE.md  README.md  linkedin_gepa.toml  prepare_huggingface_dataset.py  pyproject.toml  retry_gepa.sh  run_eval.py  run_gepa.py  run_simple.py  test_interceptor_eval.py  test_local_rlm.py  test_rlm_eval.py  test_single_rollout.py
demos/linkedin_bench/data/: gold_answers.json  gold_report.json
demos/linkedin_bench/problems/: synthtunnel.md
demos/linkedin_bench/scripts/: analyze_traces.py  build_gold_answers.py  run_rlm_eval_golds.py  run_sonnet_rollouts.py
demos/linkedin_bench/skills/linkedin.com/: SKILL.md
demos/linkedin_bench/src/linkedin_bench/: __init__.py  kernel_runner.py  skill_template.py  task_app.py  tasks.py  verifier.py
gepa_comparison/: run_synth_gepa_banking77.py
mipro_comparison/: BANKING77_BENCHMARK.md  README.md  requirements.txt  run_comparison.py  run_dspy_mipro_banking77.py  run_synth_mipro_banking77.py  setup.sh
(+81 files in other folders)
